# music-player

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: events.rs  gui.rs  history.rs  lyrics.rs  main.rs  metadata.rs  player.rs  playlist.rs
src/gui/: OFL.txt  icon.svg.import  project.godot  root.gd  root.tscn  selector_manager.gd  song.gd  song.tscn  stdin.gd
src/gui/src/: Everson Mono.ttf.import  InterTight-VariableFont_wght.ttf.import  Refresh_icon.png.import  Speaker_Icon.svg.png.import  UbuntuMono-R.ttf.import  big_play.svg.import  button.gd  button.tscn  close.svg.import  fast_forward.svg.import  gear.svg.import  history.svg.import  icon.svg.import  mute.svg.import  no_repeat.png.import  no_repeat.svg.import  no_shuffle.png.import  open.svg.import  pause.png.import  pause.svg.import  play.png.import  play.svg.import  playlist.gd  playlist.tscn  plus.svg.import  progress.gd  progress_circle.png.import  refresh.svg.import  rename.svg.import  repeat.png.import  repeat.svg.import  repeat_one.png.import  repeat_one.svg.import  rewind.svg.import  root.gd  root.tscn  save.svg.import  search.png.import  selector.gd  settings.gd  (+16 more)
src/gui/src/themes/: default.tres
