[package]
name = "music-player"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
id3 = "1.13.1"
rdev = "0.5.3"
spin_sleep = "1.2.0"
playback-rs = "0.4.4"
serde_json = "1.0.117"
bitvec = { version = "1.0.1", features = ["serde"] }
rand = "0.8.5"
serde = "1.0.203"
serde_derive = "1.0.203"
notify-rust = "4.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
xosd-rs = "0.2.0"

[patch.crates-io]
playback-rs = { git = "https://github.com/feois/playback-rs-fork.git" }
