[package]
name = "music-player"
version = "1.0.3"
edition = "2021"

[dependencies]
dirs = "5.0.1"
id3 = "1.13.1"
rdev = "0.5.3"
spin_sleep = "1.2.0"
playback-rs = "0.4.4"
serde_json = "1.0.117"
bitvec = { version = "1.0.1", features = ["serde"] }
rand = "0.8.5"
serde = "1.0.203"
serde_derive = "1.0.203"
notify-rust = "4.11.0"
fslock = "0.2.1"
xosd-rs = { version = "0.2.0", optional = true }

[dependencies.windows]
optional = true
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
]

[patch.crates-io]
playback-rs = { git = "https://github.com/feois/playback-rs-fork.git" }

[target.'cfg(target_os = "linux")'.features] # why does this not fucking work, can't believe cargo lacks such simple feature
default = ["x11-lyrics"]

[target.'cfg(target_os = "windows")'.features]
default = ["windows-lyrics"]

[features]
console = []
x11-lyrics = ["dep:xosd-rs"]
windows-lyrics = ["dep:windows"]
